tests/snapshots/app__ascii.snap
---
source: tests/app.rs
expression: view
---
"                                                                                                                        "
"                                                                                                                        "
"   mido                                                                                        + Outline ------------+ #"
"                                                                                               |                     | #"
"  mido: Markdown In, Document Out.                                                             |  v mido             | #"
"                                                                                               |  |-  Install        | #"
"  A terminal Markdown reader that renders documents the way a good reader app does: real       |  |-  Use            | #"
"  heading hierarchy, a comfortable line measure, syntax-highlighted code, and tables that      |  |-  Keys           | |"
"  line up. Built in Rust on ratatui (https://ratatui.rs).                                      |  `-  What renders   | |"
"                                                                                               |                     | |"
"                                                                                               +---------------------+ |"
"  Install                                                                                                              |"
"  -------                                                                                                              |"
"                                                                                                                       |"
"  | cargo install --path .                                                                 sh                          |"
"                                                                                                                       |"
"                                                                                                                       |"
"  Use                                                                                                                  |"
"  ---                                                                                                                  |"
"                                                                                                                       |"
"  | mido README.md          # open one file                                                sh                          |"
"  | mido docs/              # browse a folder: files on the left, outline on the right                                 |"
"  | mido                    # the current folder                                                                       |"
"  | mido -                  # read Markdown from stdin                                                                 |"
"  | mido -p README.md       # print styled text to stdout, pipe it to less -R                                          |"
"  | mido -w 80 notes.md     # cap the width (default: full terminal width)                                             |"
"                                                                                                                       |"
"                                                                                                                        "
"                                                                                                                        "
" stdin                                                                                              ? help  q quit  Top "
