tests/snapshots/app__finder.snap
---
source: tests/app.rs
expression: out
---
" docs                          │                                                                                                            "
"                               │                                                                                                            "
"  ├ ▾ guide                    │   Home                                                                                 ╭ Outline ───────╮ █"
"  │ ├   faq.md                 │                                                                                        │                │ █"
"  │ └   install.md             │  Welcome to the project. See usage (#usage) and the install guide                      │  ▾ Home        │ █"
"  ├   notes.md                 │  (guide/install.md#steps).                                                             │  └   Usage     │ █"
"  └   README.md                │                                                                                        │                │ █"
"                               │  Filler paragraph.                                                                     ╰────────────────╯ │"
"                               │                                                                                                           │"
"                               │  Filler paragraph.                                                                                        │"
"                               │                                                                                                           │"
"                               │  Filler paragraph.                                                                                        │"
"                         ╭ Find file ─────────────────────────────────────────────────────────────────────────────╮                        │"
"                         │ > fq▏                                                                                  │                        │"
"                         │                                                                                        │                        │"
"                         │▸ guide/faq.md  FAQ                                                                     │                        │"
"                         ╰──────────────────────────────────────────────────────────────── Enter open · Esc close ╯                        │"
"                               │  Filler paragraph.                                                                                        │"
"                               │                                                                                                           │"
"                               │  Filler paragraph.                                                                                        │"
"                               │                                                                                                           │"
"                               │  Filler paragraph.                                                                                        │"
"                               │                                                                                                           │"
"                               │  Filler paragraph.                                                                                        │"
"                               │                                                                                                           │"
"                               │  Filler paragraph.                                                                                        │"
"                               │                                                                                                           │"
"                               │                                                                                                            "
"                               │                                                                                                            "
" README.md                                                                                                              ? help  q quit  Top "
