tests/snapshots/app__help.snap
---
source: tests/app.rs
expression: "screen(&mut app, &mut terminal)"
---
"    ╭ Keys ────────────────────────────────────────────────────────────────╮    "
"    │ Reading                                                              │    "
"   m│ j / k, ↓ / ↑, wheel      Scroll one line                             │   █"
"    │ Ctrl-d / Ctrl-u          Half page down / up                         │   █"
"  mi│ Ctrl-f / Ctrl-b, Space   Page down / up                              │   █"
"    │ g / G                    Top / bottom                                │   │"
"  A │ t                        Table of contents                           │p  │"
"  do│ i                        Show or hide images                         │ed │"
"  co│ m                        Expand or collapse the front matter         │   │"
"  (h│ r                        Reload the file                             │   │"
"    │                                                                      │   │"
"    │ Panels and focus                                                     │   │"
"  In│ b / o                    Toggle the files / outline panel            │   │"
"  ──│ f                        Focus mode: hide the panels, full width     │   │"
"    │ Tab / Shift-Tab          Cycle focus between the panes               │   │"
"  ▎ │ Tab then ← / →           Move focus in that direction                │sh │"
"    │ l                        Focus the pane to the right                 │   │"
"    │ j / k, ↓ / ↑ in a panel  Move, Enter opens or returns                │   │"
"  Us│ Space, ← / → in a panel  Fold, collapse / expand a folder or section │   │"
"  ──│ - / = in a panel         Fold all / unfold all                       │   │"
"    │ T in the files panel     Show titles instead of file names           │   │"
"    │                                                                      │    "
"    ╰─────────────────────────────────── j/k scroll · any other key closes ╯    "
" stdin   /table  1/4                                        ? help  q quit  Top "
