tests/snapshots/app__search.snap
---
source: tests/app.rs
expression: "screen(&mut app, &mut terminal)"
---
"                                                                                "
"                                                                                "
"   mido                                                                        █"
"                                                                               █"
"  mido: Markdown In, Document Out.                                             █"
"                                                                               │"
"  A terminal Markdown reader that renders documents the way a good reader app  │"
"  does: real heading hierarchy, a comfortable line measure, syntax-highlighted │"
"  code, and tables that line up. Built in Rust on ratatui                      │"
"  (https://ratatui.rs).                                                        │"
"                                                                               │"
"                                                                               │"
"  Install                                                                      │"
"  ───────                                                                      │"
"                                                                               │"
"  ▎ cargo install --path .                                                  sh │"
"                                                                               │"
"                                                                               │"
"  Use                                                                          │"
"  ───                                                                          │"
"                                                                               │"
"                                                                                "
"                                                                                "
" stdin   /table  1/4                                        ? help  q quit  Top "
