tests/snapshots/app__sidebar_focus.snap
---
source: tests/app.rs
expression: out.clone()
---
"                                                                                                                        "
"                                                                                                                        "
"  Use                                                                                          ╭ Outline ────────────╮ │"
"  ───                                                                                          │                     │ │"
"                                                                                               │  ▾ mido             │ │"
"  ▎ mido README.md          # open one file                                                sh  │  ├   Install        │ █"
"  ▎ mido docs/              # browse a folder: files on the left, outline on the right         │ ▎├   Use            │ █"
"  ▎ mido                    # the current folder                                               │  ├   Keys           │ █"
"  ▎ mido -                  # read Markdown from stdin                                         │  └   What renders   │ █"
"  ▎ mido -p README.md       # print styled text to stdout, pipe it to less -R                  │                     │ █"
"  ▎ mido -w 80 notes.md     # cap the width (default: full terminal width)                     ╰─────────────────────╯ │"
"                                                                                                                       │"
"  Piping without  -p  prints plain text, so  mido file.md > out.txt  never leaks escape                                │"
"  codes.                                                                                                               │"
"                                                                                                                       │"
"                                                                                                                       │"
"  Keys                                                                                                                 │"
"  ────                                                                                                                 │"
"                                                                                                                       │"
"  ┌───────────────────────────────┬──────────────────────────────────────────────┐                                     │"
"  │ Key                           │ Action                                       │                                     │"
"  ┝━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┿━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┥                                     │"
"  │  j  /  k , arrows, wheel      │ Scroll one line                              │                                     │"
"  │                               │                                              │                                     │"
"  │  Ctrl-d  /  Ctrl-u            │ Half page                                    │                                     │"
"  │                               │                                              │                                     │"
"  │  Ctrl-f  /  Ctrl-b ,  Space   │ Full page                                    │                                     │"
"                                                                                                                        "
"                                                                                                                        "
" stdin   outline: j/k follow  space fold  Tab back                                                  ? help  q quit  16% "
