tests/snapshots/app__toc.snap
---
source: tests/app.rs
expression: "screen(&mut app, &mut terminal)"
---
"                                                                                "
"                                                                                "
"   mido                                                                        █"
"                                                                               █"
"  mido: Markdown In, Document Out.                                             █"
"                                                                               │"
"  A terminal Markdown reader that renders documents the way a good reader app  │"
"  does: real heading hierarchy, a comfortable line measure, syntax-highlighted │"
"  code, and tables that ╭ Contents ────────────────────╮i                      │"
"  (https://ratatui.rs). │▸ mido                        │                       │"
"                        │    Install                   │                       │"
"                        │    Use                       │                       │"
"  Install               │    Keys                      │                       │"
"  ───────               │    What renders              │                       │"
"                        ╰────── Enter jump · Esc close ╯                       │"
"  ▎ cargo install --path .                                                  sh │"
"                                                                               │"
"                                                                               │"
"  Use                                                                          │"
"  ───                                                                          │"
"                                                                               │"
"                                                                                "
"                                                                                "
" stdin                                                      ? help  q quit  Top "
